# daily_finance_briefing

./: README.md  pyproject.toml
.github/workflows/: daily-briefing.yml
config/: assets.yml
site/: data.json  index.html
site/archive/2026-04-24/: data.json  index.html
site/archive/2026-04-25/: data.json  index.html
site/archive/2026-04-26/: data.json  index.html
site/archive/2026-04-27/: data.json  index.html
site/archive/2026-04-28/: data.json  index.html
site/archive/2026-04-29/: data.json  index.html
site/archive/2026-04-30/: data.json  index.html
site/archive/2026-05-01/: data.json  index.html
site/archive/2026-05-02/: data.json  index.html
site/archive/2026-05-03/: data.json  index.html
site/archive/2026-05-04/: data.json  index.html
site/archive/2026-05-05/: data.json  index.html
site/archive/2026-05-06/: data.json  index.html
site/archive/2026-05-07/: data.json  index.html
site/archive/2026-05-08/: data.json  index.html
site/latest/: data.json  index.html
src/daily_finance_briefing/: __init__.py  cli.py  generator.py
src/daily_finance_briefing/templates/: report.html.j2
tests/: test_generator.py
